# study_project

./: mainwindow.cpp  user.cpp  user.h
studyProject/: CMakeLists.txt  Teacher.h  absquestion.cpp  absquestion.h  abstask.cpp  abstask.h  ansfactory.cpp  ansfactory.h  answer.cpp  answer.h  answertask.cpp  answertask.h  classroom.cpp  classroom.h  classroom.json  classroomfile.cpp  classroomfile.h  classtasks.cpp  classtasks.h  classtasks.ui  createanswerwindow.cpp  createanswerwindow.h  createanswerwindow.ui  createopentaskwindow.cpp  createopentaskwindow.h  createopentaskwindow.ui  createtaskwindow.cpp  createtaskwindow.h  createtaskwindow.ui  createtestwindow.cpp  createtestwindow.h  createtestwindow.ui  fileclass.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opentask.cpp  opentask.h  opentaskanswerwindow.cpp  (+42 more)
